fix: tooltip overlapping on hover in box slots

--- a/src/global.css
+++ b/src/global.css
@@ -494,6 +494,8 @@ body {
 		opacity: 0;
 		visibility: hidden;
 		pointer-events: none;
+		z-index: 100;
+
 		transition:
 			opacity 300ms ease-in-out,
 			visibility 300ms ease-in-out,
